# astrology-back

./: .gitignore  README.md  manage.py  pyproject.toml
app/: __init__.py  author.py  get_data.py  routes.py
app/api/: __init__.py  house_api.py  planet_api.py  routes.py
app/services/: houses.py  juilean_convert.py  maps_api.py  planet.py  planet_calculator.py  report.py  test.json  time_convert.py
app/services/cache/: kerykeion_geonames_cache.sqlite
app/services/eph/: s999980s.se1  se35967s.se1
app/services/house_calculators/: campanus.py  equal.py  koch.py  placidus.py  porphyry.py  regiomontanus.py  whole_sign.py
app/templates/: index.html  input.html  result.html
cache/: kerykeion_geonames_cache.sqlite
tests/: test_app.py
