[tool.poetry]
name = "astrology backend"
version = "0.1.0"
description = ""
authors = ["Adrian Makridenko"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.1"
flask-bootstrap = "^3.3.7.1"
kerykeion = "^4.0.5"
python-dotenv = "^1.0.0"
requests = "^2.31.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
